# ime

cg-ep2/: airplane.cpp  island.cpp  island.h  main.cpp  ocean.h  terrain.txt
conceitos/: Lazy.java  area-cylinder.scm  area-pipe.scm  ep1-henrique-gemignani-passos-lima.rkt  ep2-henrique-gemignani-passos-lima.rkt  hello.scm  merge-yeah.ss  merge.ss  netpay.scm  tax.scm  what-kind.scm  xinterp.bak  xinterp.ss
eps/mac0110_introducao/ep1/: GameNim.java
eps/mac0110_introducao/ep2/: AutoTest.java  Functions.java  Helper.java  Main.java  Performance.java  readme.txt
eps/mac0110_introducao/ep3/: Auxiliar.java  Imagem.java  LeituraEscritaImagem.java  Main.java  MenuAtual.java  VisualizadorImagem.java
eps/mac0122_algoritmos/ep1/: conjectura.c
eps/mac0122_algoritmos/ep2/: fractal-antigo.c  fractal.c
eps/mac0122_algoritmos/ep3/: oldresta.c  sresta.c
eps/mac0122_algoritmos/ep4/: cadastro.c  cadastro2.c  compara.c  disciplinas.txt  instrucoes1.txt  instrucoes_ex.txt  saida.txt
eps/mac0122_algoritmos/ep5/: HexV04.c
eps/mac0211-labprog/ep1/: EPMontagem.html  cfiltraprimo.s  criacaoEscrita.asm  entrada.txt  leitura.asm  syscalltest.asm
eps/mac0211-labprog/ep1/final/: LEIAME.txt  LEIAME2.txt  cfiltraprimo.c  compara.c  filtra.asm  gerador.c  main.c
eps/mac0316-conceitos/ep0/: Exercícios de Scheme.htm
eps/mac0316-conceitos/ep1/: MAC0316_5754 - Primeiro Exercício-Programa.htm  ep1-henrique-gemignani-passos-lima.rkt
eps/mac0316-conceitos/ep2/: MAC0316_5754 - Segundo Exercício-Programa.htm  xinterp-lazy.bak  xinterp-lazy.ss  xinterp.ss
eps/mac0316-conceitos/ep3/: Laziness.hs  MAC0316_5754 - Terceiro Exercício-Programa.htm  README
eps/mac0316-conceitos/ep4/: MAC0316_5754 - Quarto Exercício-Programa.htm  ex1_continuations.txt  ex1_laziness.txt  ex2_continuations.scm  ex2_laziness.txt
eps/mac0323-ed/ep1/: CRUEL.c  CRUEL.h  main.c
eps/mac0323-ed/ep2/: BD.c  BD.h  FILEMANAGER.c  FILEMANAGER.h  Makefile  README.txt  RPN.c  RPN.h  main.c
eps/mac0323-ed/ep2/libed/: BST.c  BST.h  ITEM.c  ITEM.h  LL.c  STACK.h  STACKLL.c  WORD.c  WORD.h  extra.c  extra.h
eps/mac0323-ed/ep3/: Makefile  compress.c  decompress.c  main.c
eps/mac0323-ed/ep3/lib/: LL.c  LL.h  common.h  trie.c  trie.h
eps/mac0323-ed/lista/: conjuntos.c  rainhas.c  separation.c
eps/mac0329-algebool/: algebool-finaldigito.circ  display5bit.circ  soma.circ  yaycircuito.circ
eps/mac0336-cripto/: .gitignore  CMakeLists.txt  K128.c  K128.h  LEIA.ME.txt  crproj2012.tex  main.c  test.c  types.h
eps/mac0420-cg/ep1/: Bomb.cpp  Bomb.h  CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  README.txt  Treco.cpp  Treco.h  main.cpp
eps/mac0420-cg/ep1/base/: Displayable.h  Drawable.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Vector2D.cpp  Vector2D.h  VideoManager.cpp  VideoManager.h  types.h
eps/mac0420-cg/ep1/base/display/: Layer.cpp  Layer.h  Sprite.cpp  Sprite.h
eps/mac0420-cg/ep1/base/draw/: Circle.cpp  Circle.h  Rect.cpp  Rect.h
eps/mac0420-cg/ep2/: Makefile  airplane.h  input.txt  ocean.cpp  vector3d.cpp  vector3d.h
eps/mac0420-cg/ep3/: Makefile  common.h  light.cpp  light.h  main.cpp  matrix.cpp  matrix.h  object.h  pigment.cpp  pigment.h  ray.cpp  ray.h  screen.cpp  screen.h  sphere.cpp  sphere.h  surface.h  triangle.cpp  triangle.h  vector3d.cpp  vector3d.h
extra/: matrixnd.h  replicate.c  vectornd-test.cpp  vectornd.h
